# Sokol.NET

./: .gitignore  .gitmodules  CLAUDE.md  README.md  Sokol.NET.sln
.github/workflows/: build-camerac.yml  build-libraries.yml  build-spine-c.yml
bindgen/: gen.py  gen_csharp.py  gen_ir.py
bindgen/c/: camerac.c  manifoldc.c  nanosvg.c  nanovg.c  sokol_filesystem.c
docs/: AAB_BUILD_GUIDE.md  ANDROID_PROPERTIES.md  BUILD_SYSTEM.md  IOS_PROPERTIES.md  README.md  SOKOL_FILESYSTEM.md
examples/AndroidSokolApp/: Directory.Build.props
examples/BlockFall/: BlockFall.csproj  BlockFallWeb.csproj  Directory.Build.props  README.md
examples/BlockFall/Source/: AudioManager.cs  BlockFall-app.cs  Program.cs  TetrisGame.cs
examples/CGltfViewer/: CGltfViewer.csproj  CGltfViewerWeb.csproj  Directory.Build.props  IMPLEMENTATION.md  README.md
examples/CGltfViewer/Source/: CGltfAnimatedCharacter.cs  CGltfAnimation.cs  CGltfAnimator.cs  CGltfBone.cs  CGltfExtensionRegistry.cs  CGltfModel.cs  CGltfNode.cs  Camera.cs  EnvironmentMap.cs  EnvironmentMapLoader.cs  Event.cs  Frame.cs  Frame_Morphing.cs  Frame_SkinnedMorphing.cs  Frame_Skinning.cs  Frame_Static.cs  GUI.cs  Init.cs  Main.cs  Mesh.cs  PipelineManager.cs  Program.cs  Vertex.cs  (+1 more)
examples/Checkers/: Checkers.csproj  CheckersWeb.csproj  README.md
examples/Chess/: Chess.csproj  Chessweb.csproj  README.md
examples/ConnectFour/: ConnectFour.csproj  ConnectFourWeb.csproj  Directory.Build.targets  README.md
examples/FileSystemTest/: FileSystemTest.csproj  FileSystemTestWeb.csproj  README.md
examples/GUIDemo/: GUIDemo.csproj  GUIDemoWeb.csproj  README.md  Task.md
examples/GinRummy/: GinRummy.csproj  GinRummyWeb.csproj  README.md
examples/GltfViewer/: Directory.Build.props
examples/JoltPhysics/: Directory.Build.props  JoltPhysicsWeb.csproj
examples/ManifoldApp/: Directory.Build.props  ManifoldApp.csproj  ManifoldAppWeb.csproj  README.md
examples/NanoSVGDemo/: NanoSVGDemo.csproj  NanoSVGDemoWeb.csproj  README.md
examples/NanoVGDemo/: NanoVGDemo.csproj  NanoVGDemoWeb.csproj  README.md
examples/Reversi/: Directory.Build.props  README.md  Reversi.csproj  ReversiWeb.csproj
examples/SampleBrowser/: Directory.Build.props  PRIVACY_POLICY.md  README.md  SampleBrowser.csproj  SampleBrowserWeb.csproj
examples/ShaderToyApp/: ShaderToyAppWeb.csproj
examples/SkiaSokolApp/: Directory.Build.props  SkiaSokolAppWeb.csproj
examples/TexasHoldem/: README.md  TexasHoldem.csproj  TexasHoldemWeb.csproj
examples/assimp_scene/: Directory.Build.props  assimp_sceneWeb.csproj
examples/assimp_simple/: Directory.Build.props
examples/bepuphysics/: Directory.Build.props  bepuphysicsWeb.csproj
examples/box2dPhysics/: Directory.Build.props  box2dPhysicsWeb.csproj
examples/camera_hardware/: Directory.Build.props  README.md  camera_hardware.csproj  camera_hardwareWeb.csproj
examples/clear/: clearWeb.csproj
examples/cube/: cubeweb.csproj
examples/cubemap_jpeg/: Directory.Build.props
examples/instancing/: instancingWeb.csproj
examples/ozz_shdfeatures/: Directory.Build.props  ozz_shdfeaturesWeb.csproj
examples/sgl/: Directory.Build.props  sglWeb.csproj
examples/shapes_transform/: Directory.Build.props
examples/sokol_gp_bench/: README.md  sokol_gp_bench.csproj  sokol_gp_benchWeb.csproj
examples/sokol_gp_blend/: README.md  sokol_gp_blend.csproj  sokol_gp_blendWeb.csproj
examples/sokol_gp_effect/: README.md  sokol_gp_effect.csproj  sokol_gp_effectWeb.csproj
examples/sokol_gp_framebuffer/: README.md  sokol_gp_framebuffer.csproj  sokol_gp_framebufferWeb.csproj
examples/sokol_gp_primitives/: Directory.Build.props  README.md  sokol_gp_primitives.csproj  sokol_gp_primitivesWeb.csproj
examples/sokol_gp_sdf/: README.md  sokol_gp_sdf.csproj  sokol_gp_sdfWeb.csproj
examples/spine_inspector/: Directory.Build.props
examples/spine_simple/: Directory.Build.props
examples/spine_skinsets/: spine_skinsetsWeb.csproj
ext/: CMakeLists.txt  sokol.c  sokol_csharp_internal_wrappers.h
ext/assimp/: CMakeLists.txt
ext/camerac/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  LICENSE  README.md
ext/camerac/include/: camerac.h
ext/camerac/libs/ios/release/camerac.framework/: Info.plist  camerac
ext/camerac/libs/macos/X64/release/: libcamerac.dylib
ext/camerac/libs/macos/arm64/release/: libcamerac.dylib
ext/camerac/libs/macos/universal/release/: libcamerac.dylib
ext/camerac/libs/windows/x64/release/: camerac.lib
ext/camerac/samples/: CMakeLists.txt  Info.plist  camerac_sample.c
ext/camerac/samples/android/: build.gradle  build.sh  local.properties  settings.gradle
ext/camerac/samples/android/app/: build.gradle
ext/camerac/samples/android/app/src/main/: AndroidManifest.xml
ext/camerac/samples/android/app/src/main/cpp/: CMakeLists.txt  native_sample.cpp
ext/camerac/samples/android/app/src/main/java/com/camerac/sample/: MainActivity.java
ext/camerac/samples/scripts/: android-logcat.sh  build-android.sh  build-ios.sh  build-xcode.sh
ext/camerac/scripts/: build-all.sh  build-camerac-android-all.sh  build-camerac-android.sh  build-camerac-ios.sh  build-camerac-linux.sh  build-camerac-macos.sh  build-camerac-web.sh  build-camerac-windows.ps1
ext/camerac/src/: camerac.c  camerac_internal.h
ext/camerac/src/android/: camerac_android.c
ext/camerac/src/coremedia/: camerac_coremedia.m
ext/camerac/src/emscripten/: camerac_emscripten.c
ext/camerac/src/mediafoundation/: camerac_mediafoundation.c
ext/camerac/src/v4l2/: camerac_v4l2.c
ext/ozzutil/: CMakeLists.txt
ext/sokol_gp/: sokol_gp.h
ext/spine-c/: CMakeLists.txt
ext/spine-c/libs/ios/release/spine-c.framework/: Info.plist
ext/spine-c/libs/macos/arm64/release/: libspine-c.dylib
scripts/: build-web-library.sh
src/System.Hardware/: CameraC.cs
src/sokol/: FileSystem.cs  NanoSVG.cs  NanoVG.cs  SDebugUI.cs  SFilesystem.Fetch.cs  SGImgui.cs
templates/template_app/: Directory.Build.props  Directory.Build.targets
tools/SokolApplicationBuilder/: Program.cs
tools/SokolApplicationBuilder/templates/Android/native-activity/app/src/main/cpp/: CMakeLists.txt
(+451 files in other folders)
